<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mhb</string>
    <string name="action_settings">Settings</string>
    <string name="action_number">Numbers</string>
    <string name="action_author">Authors</string>
    <string name="action_title">Title</string>

    <string name="hello">Hello World, SearchViewActivity!</string>
    <string name="search_label">Hymns</string>
    <string name="search_hint">Search Hymns</string>
    <string name="settings_description">List of Hymns</string>

    <string name="ui_number_title">Mhb No.</string>
    <string name="ui_title_title">Title</string>
    <string name="ui_author_title">Author</string>
   
    <string name="hymn_text">Begone unbelief, my Savior is near,
And for my relief will surely appear:
By prayer let me wrestle, and He wilt perform,
With Christ in the vessel, I smile at the storm.

Though dark be my way, since He is my Guide,
’Tis mine to obey, ’tis His to provide;
Though cisterns be broken, and creatures all fail,
The Word He has spoken shall surely prevail.

His love in time past forbids me to think
He’ll leave me at last in trouble to sink;
Each sweet Ebenezer I have in review,
Confirms His good pleasure to help me quite through.

Determined to save, He watched o’er my path,
When Satan’s blind slave, I sported with death;
And can He have taught me to trust in His Name,
And thus far have brought me, to put me to shame?

Why should I complain of want or distress,
Temptation or pain? He told me no less:
The heirs of salvation, I know from His Word,
Through much tribulation must follow their Lord.

How bitter that cup, no heart can conceive,
Which He drank quite up, that sinners might live!
His way was much rougher, and darker than mine;
Did Jesus thus suffer, and shall I repine?

Since all that I meet shall work for my good,
The bitter is sweet, the medicine is food;
Though painful at present, wilt cease before long,
And then, O! how pleasant, the conqueror’s song!</string>

</resources>