<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/page_side_padding"
    android:paddingRight="@dimen/page_side_padding"
    android:paddingTop="@dimen/top_offset" >

    <TextView
        android:id="@+id/textGotoNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_number_title"
        android:textSize="@dimen/number_size" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/top_title_margin"
        android:gravity="center_horizontal"
        android:text="@string/ui_title_title"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ui_author_title"
        android:textSize="@dimen/author_size"
        android:textStyle="italic" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/bottom_offset" >

        <TextView
            android:id="@+id/textLyrics"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/hymn_side_padding"
            android:paddingRight="@dimen/hymn_side_padding"
            android:text="@string/hymn_text" />
    </ScrollView>

</LinearLayout>